--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,3 +8,8 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: create
+
+  uni:
+    app:
+     jwtsecret: =====gfdgdyru6yngn=====
+     jwtExpiration: 897658766
